<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/fondo">
    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:text="@string/maskbits" android:textColor="@color/solid_blue"/>
    <EditText
        android:id="@+id/entry"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:inputType="number"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/label"/>
    <EditText
        android:id="@+id/addrbase"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dip"
        android:inputType="text"
        android:background="@android:drawable/editbox_background"
		android:text="@string/ipaddr_def"
        android:layout_below="@id/label"/>		
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/bt_ok" />
    <Button
    	android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/ok"
        android:layout_alignTop="@id/ok"
        android:text="@string/bt_clear" />
<!-- <TextView
        android:id="@+id/labelRes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ok"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="30dip"
        android:text="@string/lb_res" android:textColor="@color/solid_blue"/>-->
    <TextView
        android:id="@+id/labelMask"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:textColor="@color/solid_green"
        android:layout_height="wrap_content"
        android:layout_below="@id/ok"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/lb_mask"/>
    <TextView
        android:id="@+id/mask4oct"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/casi_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelMask"
        android:layout_alignTop="@id/labelMask"/>
    <TextView
        android:id="@+id/labelNumHost"
        android:visibility="visible"
        android:textColor="@color/solid_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mask4oct"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/lb_hosts"/>
    <TextView
        android:id="@+id/numHost"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/casi_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelNumHost"
        android:layout_alignTop="@id/labelNumHost"/>
    <TextView
        android:id="@+id/labelNumAddr"
        android:visibility="visible"
        android:textColor="@color/solid_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numHost"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/lb_addres"/>
    <TextView
        android:id="@+id/numAddr"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/casi_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelNumAddr"
        android:layout_alignTop="@id/labelNumAddr"/>
    <TextView
        android:id="@+id/labelNumAddrIni"
        android:visibility="visible"
        android:textColor="@color/solid_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelNumAddr"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/lb_addresIni"/>
    <TextView
        android:id="@+id/numAddrIni"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/casi_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelNumAddrIni"
        android:layout_alignTop="@id/labelNumAddrIni"/>
    <TextView
        android:id="@+id/labelNumAddrEnd"
        android:visibility="visible"
        android:textColor="@color/solid_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelNumAddrIni"
        android:layout_marginLeft="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/lb_addresEnd"/>
    <TextView
        android:id="@+id/numAddrEnd"
        android:visibility="invisible"
        android:textStyle="bold"
        android:textColor="@color/casi_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/labelNumAddrEnd"
        android:layout_alignTop="@id/labelNumAddrEnd"/>		
</RelativeLayout>
